tests/fixtures/errors/arith_resultval.z
# E0100: a lossy conversion yields a resultval, which declares no arithmetic
# operator; using it in `+` is a type error, not invalid C. Unwrap first.
main: function is {
    big: 999.u64
    x: big.u32 + 1
    print "\{x}"
}
